--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
   "homepage": "https://github.com/kelvinccc/swejob-chrome-extension#readme",
   "devDependencies": {
     "@types/chrome": "^0.0.196",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.23.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
