--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
      "outDir": "dist/js",
      "noEmitOnError": true,
      "typeRoots": [ "node_modules/@types" ]
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
